fix overflow issue in save chart settings

--- a/src/charts/chartOptions.scss
+++ b/src/charts/chartOptions.scss
@@ -91,7 +91,7 @@
     }
     .chart-template-manager-root {
       max-height: 310px;
-      overflow: hidden;
+      overflow: auto;
       .menu {
         button {
           background-color: #273051;
